--- a/documentation/src/pages/styles.module.css
+++ b/documentation/src/pages/styles.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: #2b3137;
 }
 
 @media screen and (max-width: 966px) {
@@ -30,6 +31,14 @@
 }
 
 .featureImage {
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
+  padding: 2rem 0;
+}
+
+.heroLogo {
+  animation-duration: 2s;
+  animation-name: jackInTheBox;
+  padding: 20px;
+  max-width: 250px;
 }
