--- a/documentation/src/pages/styles.module.css
+++ b/documentation/src/pages/styles.module.css
@@ -1,3 +1,4 @@
+/* stylelint-disable docusaurus/copyright-header */
 /**
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
@@ -8,7 +9,27 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: #2b3137;
+}
+
+@keyframes rotateIn {
+  from {
+    transform-origin: center;
+    transform: rotate3d(0, 0, 1, -45deg);
+    opacity: 0;
+  }
+
+  to {
+    transform-origin: center;
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+.heroLogo {
+  animation-duration: 2s;
+  animation-name: rotateIn;
+  padding: 20px;
+  max-width: 250px;
 }
 
 @media screen and (max-width: 966px) {
@@ -33,12 +54,4 @@
 .featureImage {
   height: 100px;
   width: 100px;
-  padding: 2rem 0;
-}
-
-.heroLogo {
-  animation-duration: 2s;
-  animation-name: jackInTheBox;
-  padding: 20px;
-  max-width: 250px;
 }
